<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.example.suriya.androideatit.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/logo_eat_it" />

        <TextView
            android:id="@+id/tvSlogan"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/slogan"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="2">

        <com.rilixtech.materialfancybutton.MaterialFancyButton
            android:id="@+id/btnSingUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            fancy:mfb_text="@string/singup"
            fancy:mfb_radius="4dp"
            fancy:mfb_defaultColor="@color/btnSingUp"/>

        <com.rilixtech.materialfancybutton.MaterialFancyButton
            android:id="@+id/btnSingIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            fancy:mfb_text="@string/sing_in"
            fancy:mfb_radius="4dp"
            fancy:mfb_defaultColor="@color/btnSingActive"/>

    </LinearLayout>

</RelativeLayout>
